--- a/kubeFiles/config-map.yaml
+++ b/kubeFiles/config-map.yaml
@@ -11,13 +11,7 @@ data:
       scrape_interval: 5s
       evaluation_interval: 5s
     rule_files:
-      - /etc/prometheus/prometheus.rules
-    alerting:
-      alertmanagers:
-      - scheme: http
-        static_configs:
-        - targets:
-          - "alertmanager.monitoring.svc:9093"
+      # Rules are empty for now 
 
     scrape_configs:
       - job_name: 'kubernetes-apiservers'
