--- a/grafanaFiles/deployment.yaml
+++ b/grafanaFiles/deployment.yaml
@@ -20,13 +20,13 @@ spec:
         ports:
         - name: grafana
           containerPort: 3000
-        resources:
-          limits:
-            memory: "2Gi"
-            cpu: "1000m"
-          requests: 
-            memory: "1Gi"
-            cpu: "500m"
+       # resources:
+       #   limits:
+       #     memory: "2Gi"
+       #     cpu: "1000m"
+       #   requests: 
+       #     memory: "1Gi"
+       #     cpu: "500m"
         volumeMounts:
           - mountPath: /var/lib/grafana
             name: grafana-storage
